testing/ui-tests/src/incorrect/need_url_or_path.rs
#[subxt::subxt()]
pub mod node_runtime {}

fn main() {}
